css/app.css
/* ... */
input[type=submit]:hover, .button.outlined:hover {
  transform: scale(1.1);
  transition: transform 0.2s ease-in-out;
}
input.disabled[type=submit], .disabled.button.outlined {
  opacity: 0.4;
  cursor: not-allowed;
}
input.disabled[type=submit]:hover, .disabled.button.outlined:hover {
  transform: none;
  cursor: not-allowed;
}

.button.outlined.borderless {
  border-color: transparent;
  padding: 0.4em 1.5em;
}

.close-button {
  display: inline-block;
  border: none;
  background: url("img/close-button.svg") no-repeat center center;
  cursor: pointer;
  width: 1.5em;
  height: 1.5em;
}

form {
  position: relative;
}

input[type=text], input[type=email], input[type=password] {
  font-size: 1.4em;
  font-weight: 500;
  padding: 0.55em 1em 0.55em 1em;
  border: #fff solid 2px;
  border-radius: 3.5px;
  box-sizing: border-box;
  background: #fff;
  margin-bottom: 1em;
  outline: none;
  line-height: 1.3;
  width: 100%;
  display: inline-block;
  transition: outline 0.2s ease-in-out;
}
input[type=text]:active, input[type=text]:focus, input[type=email]:active, input[type=email]:focus, input[type=password]:active, input[type=password]:focus {
  outline: #1C7554 1px;
  transition: outline 0.2s ease-in-out;
}
input[type=text].error, input[type=email].error, input[type=password].error {
  border-color: #910d29;
}


label {
  font-size: 1.4em;
  display: inline-block;
  margin-bottom: 0.5em;
}
label:after {
  content: ":";
}
label.checkbox {
  cursor: pointer;
}

input[type=checkbox] {
  display: none;
}
input[type=checkbox] + label {
  margin-bottom: 1.5em;
  vertical-align: middle;
  line-height: 1;
  padding-left: 2em;
}
input[type=checkbox] + label:before {
  content: "";
  display: inline-block;
  width: 1em;
  height: 1em;
  padding: 0.1em;
  background: #fff;
  border: #fff solid 2px;
  border-radius: 3.5px;
  margin-right: 0.5em;
  vertical-align: middle;
  margin-left: -2em;
}
input[type=checkbox] + label:after {
  content: "";
}
input[type=checkbox]:checked ~ label:before {
  background: url("/img/tick-icon.svg") no-repeat #fff;
}
input[type=checkbox].error ~ label:before {
  border-color: #910d29;
}

label.validation {
  display: block;
  position: absolute;
  background: #910d29;
  border-radius: 3.5px;
  box-shadow: rgba(39, 39, 39, 0.6) 0 0 1.6em;
  padding: 0.5em 1em;
  margin-top: -1em;
  right: 0;
}
label.validation:after {
  content: "";
}
label.validation.full-width {
  width: 100%;
  margin-top: 0.5em;
}

.alert {
  padding: 0.5em 1em;
  display: block;
  margin-top: 1em;
  border-radius: 3.5px;
}
.alert.error {
  background: #910d29;
  color: #EFEEE6;
}
.alert.success {
  background: #1C7554;
  color: #fff;
}
.alert ul li {
  margin-bottom: 0.5em;
}

#deck {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 17rem;
  aspect-ratio: 132/203;
}
@media (max-width: 480px) and (min-height: 680px) {
  #deck {
    width: 18.5rem;
  }
}
@media (max-width: 480px) and (min-height: 780px) {
  #deck {
    width: 20rem;
  }
}
@media (min-width: 768px) and (min-height: 780px) {
  #deck {
    width: 20rem;
  }
}
@media (min-height: 1280px) {
  #deck {
    width: 23rem;
  }
}

.card {
  position: absolute;
  top: 0;
  width: 17rem;
  aspect-ratio: 132/203;
  box-sizing: border-box;
  background: #fff;
  padding: 0.5em;
  outline: 1px solid rgba(39, 39, 39, 0.5);
  border-radius: 7px;
  box-shadow: rgba(39, 39, 39, 0.4) 0 0 0.4em;
  font-size: 0.85rem;
  animation: slideUpFromBottom 0.5s ease backwards 0.5s;
}
.card.finished {
  animation: fadeIn 0.5s ease-in-out backwards 0.5s;
}
@media (max-width: 480px) and (min-height: 680px) {
  .card {
    width: 18.5rem;
    font-size: 0.9rem;
  }
}
@media (max-width: 480px) and (min-height: 780px) {
  .card {
    width: 20rem;
    font-size: 1rem;
  }
}
@media (min-width: 768px) and (min-height: 780px) {
  .card {
    width: 20rem;
    font-size: 1rem;
  }
}
@media (min-height: 1280px) {
  .card {
    width: 23rem;
  }
}
.card.card-hidden {
  display: none;
}
.card .inner {
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
  background: url("../img/card-bg.png") no-repeat;
  background-size: cover;
  outline: 1px solid #DBD5C5;
  border-radius: 3.5px;
  height: 100%;
  padding: 0.8em;
}
.card picture {
  width: 100%;
  aspect-ratio: 23/21;
  background: #EFEEE6;
  outline: #D2CCBB solid 1px;
  border: #fff solid 0.4em;
  border-radius: 3.5px;
  box-sizing: border-box;
  overflow: hidden;
}
.card picture img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center;
  transition: scale 0.5s;
}
.card picture img[data-zoom-level="1"] {
  scale: 3;
}
.card picture img[data-zoom-level="2"] {
  scale: 2;
}
.card picture img[data-zoom-level="3"] {
  scale: 1;
}
.card .answers {
  display: flex;
  flex-direction: column;
  align-items: center;
  align-content: center;
  justify-content: center;
  flex: 1;
  margin-top: 0.5em;
}
.card .answers li {
  display: block;
  width: 100%;
  text-align: center;
  padding: 0.3em;
  border: 1px solid #DBD5C5;
  margin-bottom: 0.4em;
  border-radius: 3.5px;
  cursor: pointer;
  transition: all 0.1s ease-in-out;
}
.card .answers li .cultivar {
  font-style: normal;
  font-size: 0.9em;
}
.card .answers li:last-child {
  margin-bottom: 0;
}
.card .answers li:hover {
  border-color: #14474E;
  transition: all 0.1s ease-in-out;
  transform: scale(1.05);
  box-shadow: rgba(39, 39, 39, 0.4) 0 0 0.3em;
}
.card .answers li.correct-answer {
  outline: solid 1px #1C7554;
  animation: throb 0.2s ease-in-out 3;
  animation-delay: 0.4s;
}
.card .answers li.correct-answer-selected {
  outline: solid 2px #1C7554;
  animation: throb 0.2s ease-in-out 5;
  cursor: default;
}
.card .answers li.correct-answer-selected:hover {
  transform: none;
  box-shadow: none;
  border-color: #DBD5C5;
}
.card .answers li.wrong-answer-selected {
  outline: solid 2px #910d29;
  animation: wobble 0.2s ease-in-out 3;
  cursor: default;
}
/* ... */

